2004-07-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* Internal changes completed with some crude hacks to some point where the
	  game at least compiles and runs again.
	  Don't expect the game to work in any way, you can just look at the screens.
	  Of course this will change back to normal some day ;-)

2004-06-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* BIG internal transformation is going on.
	* airplane_interface and ship_interface disabled (not included anymore in the
	  game - they're rather useless)
	* next idea: Split ai class in heirs.
	* next idea: make convoy standalone class, not heir of sea_object.
	  convoys are special anyway. And they do not turn like ships, etc.

2004-06-20  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* replaced reference class by sea_object reference counting.
	  use assign_ref and check_ref to manage references.

2004-06-19  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* BIG internal change: sea_object and heirs
	  - sea_object contained many things that are right for ships but not for
	    other objects, hence these things (throttle, rudder etc.) are moved
	    to class ship. sea_object is now a rigid body with realistic physical
	    simulation. We now use position, velocity and acceleration for 3d position
	    and orientation. Objects give their acceleration (positional and rotational)
	    at the current time and their local drag (water/air resistance).
	    The simulation computes the trajectory from it.
	  - this conversion is not complete yet.

2004-06-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* replaced sea_object* by special reference class.
	  that way pointers will get erased automatically when a sea_object is killed.
	  some fixme's remain (convoy still uses pointers).
	  Maybe we should use ref's everywhere, even in game, and replace destroy() by
	  a "delete this" function.

2004-05-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp
	  - fixed 2d map display basically