@@ -27,7 +27,7 @@ class quaterniont
 	D s;		// r
 	vector3t<D> v;	// i, j, k
 
-	quaterniont() : s(0), v() {}
+	quaterniont() : s(1), v() {}	// note: not fully zero, but neutral rotation instead
 	quaterniont(const quaterniont<D>& o) : s(o.s), v(o.v) {}
 	quaterniont& operator= (const quaterniont<D>& o) { s = o.s; v = o.v; return *this; }
 	quaterniont(const D &r_, const D &i_, const D &j_, const D &k_) : s(s_), v(i_, j_, k_) {}
@@ -50,14 +50,22 @@ class quaterniont
 	template<class E> void assign(const vector2t<E>& other) { s = D(other.s); v.assign(other.v); }
 	static quaterniont<D> vec(const D& x, const D& y, const D& z) { return quaterniont(0, vector3t<D>(x, y, z)); }
 	static quaterniont<D> vec(const vector3t<D>& p) { return quaterniont(D(0), p); }
-	static quaterniont<D> neutral_rot(void) { return quaterniont(D(1), vector3t<D>()); }
+	static quaterniont<D> zero(void) { return quaterniont(D(0), vector3t<D>()); }
 	static quaterniont<D> rot(const D& angle, const D& x, const D& y, const D& z) { D rad = D(angle*M_PI/180.0); return quaterniont(cos(rad/2), vector3t<D>(x, y, z) * sin(rad/2)); }
 	static quaterniont<D> rot(const D& angle, const vector3t<D>& axis) { D rad = D(angle*M_PI/180.0); return quaterniont(cos(rad/2), axis * sin(rad/2)); }
 	void angleaxis(D& angle, D& x, D& y, D& z) const { D a = acos(s); angle = D(2*a*180.0/M_PI); D sa = sin(a); x = v.x/sa; y = v.y/sa; z = v.z/sa; }
 	void angleaxis(D& angle, vector3t<D>& axis) const { D a = acos(s); angle = D(2*a*180.0/M_PI); axis = v * (D(1.0)/sin(a)); }
 	vector3t<D> rotate(const D& x, const D& y, const D& z) const { quaterniont<D> p2 = *this * vec(x, y, z) * this->conj(); return p2.v; }
 	vector3t<D> rotate(const vector3t<D>& p) const { quaterniont<D> p2 = *this * vec(p) * this->conj(); return p2.v; }
-	quaterniont<D> scale_rot_angle(const D& scal) { D ang = acos(s); D sa = sin(ang*scal)/sin(ang); return quaterniont(cos(ang*scal), v * sa); }
+	
+	quaterniont<D> scale_rot_angle(const D& scal)
+	{
+		D ang = acos(s);
+		if (ang <= D(0.00001))
+			return quaterniont();
+		D sa = sin(ang*scal)/sin(ang);
+		return quaterniont(cos(ang*scal), v * sa);
+	}
 };
 
 template<class D2> inline quaterniont<D2> operator* (const D2& scalar, const quaterniont<D2>& q) { return q * scalar; }
